--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -1,5 +1,7 @@
 name: PR Checks
-on: pull_request
+on:
+  pull_request:
+  push: { branches: [main] }
 jobs:
   run-tests:
     runs-on: ubuntu-latest
